switch database columns to snake case; redact receiving side when exporting instrucotr notes; improve swagger comments
